--- a/src/output.css
+++ b/src/output.css
@@ -551,17 +551,60 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.absolute {
+  position: absolute;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
+.relative {
+  position: relative;
+}
+
+.left-\[1\.5rem\] {
+  left: 1.5rem;
+}
+
+.top-\[-\.5rem\] {
+  top: -.5rem;
+}
+
+.left-\[2rem\] {
+  left: 2rem;
+}
+
+.left-\[1\.6rem\] {
+  left: 1.6rem;
+}
+
+.left-\[1\.8rem\] {
+  left: 1.8rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mt-44 {
+  margin-top: 11rem;
 }
 
 .flex {
@@ -572,40 +615,60 @@ video {
   height: 100vh;
 }
 
-.w-full {
-  width: 100%;
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
 }
 
 .w-36 {
   width: 9rem;
 }
 
-.w-56 {
-  width: 14rem;
+.w-full {
+  width: 100%;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
+@keyframes flying-astronaut-responsive {
+  0% {
+    top: -1rem;
+  }
 
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  25% {
+    top: -2rem;
   }
 
   50% {
-    transform: none;
-    animation-timing-function: cubic-bezier(0,0,0.2,1);
+    top: -3rem;
+  }
+
+  100% {
+    top: -4rem;
   }
 }
 
-.animate-bounce {
-  animation: bounce 1s infinite;
+.animate-flying-astronaut-responsive {
+  animation: flying-astronaut-responsive 5s ease-in-out infinite alternate;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -616,23 +679,8 @@ video {
   justify-content: center;
 }
 
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
 .text-center {
   text-align: center;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-3xl {
@@ -640,14 +688,127 @@ video {
   line-height: 2.25rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
 .text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
 }
 
+@media (min-width: 640px) {
+  .sm\:left-\[3rem\] {
+    left: 3rem;
+  }
+
+  .sm\:w-40 {
+    width: 10rem;
+  }
+
+  .sm\:w-44 {
+    width: 11rem;
+  }
+
+  .sm\:w-60 {
+    width: 15rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:left-\[7\.5rem\] {
+    left: 7.5rem;
+  }
+
+  .md\:mt-52 {
+    margin-top: 13rem;
+  }
+
+  .md\:w-48 {
+    width: 12rem;
+  }
+
+  .md\:w-8\/12 {
+    width: 66.666667%;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:text-center {
+    text-align: center;
+  }
+}
+
 @media (min-width: 1024px) {
-  .lg\:w-3\/12 {
-    width: 25%;
+  .lg\:static {
+    position: static;
+  }
+
+  .lg\:left-0 {
+    left: 0px;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:h-12 {
+    height: 3rem;
+  }
+
+  .lg\:h-96 {
+    height: 24rem;
+  }
+
+  .lg\:h-72 {
+    height: 18rem;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:w-72 {
+    width: 18rem;
+  }
+
+  @keyframes flying-astronaut {
+    0% {
+      margin-bottom: 0;
+    }
+
+    25% {
+      margin-bottom: 1.5rem;
+    }
+
+    50% {
+      margin-bottom: 3rem;
+    }
+
+    100% {
+      margin-bottom: 6rem;
+    }
+  }
+
+  .lg\:animate-flying-astronaut {
+    animation: flying-astronaut 5s ease-in-out infinite alternate;
   }
 
   .lg\:flex-row {
@@ -662,17 +823,9 @@ video {
     justify-content: space-between;
   }
 
-  .lg\:justify-around {
-    justify-content: space-around;
-  }
-
   .lg\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
-  }
-
-  .lg\:text-left {
-    text-align: left;
   }
 
   .lg\:text-start {
